--- a/index.html
+++ b/index.html
@@ -1,47 +1,70 @@
 <!doctype html>
 <html lang="es">
-
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Japflix</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Japflix</title>
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/style.css">
 
-  <link href="css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="css/style.css">
-  
 </head>
-
 <body class="bg-dark">
-  <main>
-    <div class="text-center container">
-      <div class="row py-lg-3">
-        <div class="col-lg-6 col-md-8 mx-auto">
-          <h1 class="fw-light"><img src="img/japflix.png" alt=""></h1>
-          <input type="search" class="form-control" name="buscar" id="inputBuscar" placeholder="Ej.: The Lion King">
-          <button class="btn btn-primary m-2" id="btnBuscar">Buscar</button>
+    <main>
+        <div class="text-center container">
+            <div class="row py-lg-3">
+                <div class="col-lg-6 col-md-8 mx-auto">
+                    <h1 class="fw-light"><img src="img/japflix.png" alt=""></h1>
+                    <input type="search" class="form-control" name="buscar" id="inputBuscar" placeholder="Ej.: The Lion King">
+                    <button class="btn btn-primary m-2" id="btnBuscar">Buscar</button>
+                </div>
+            </div>
         </div>
+        <div class="album">
+            <ul class="list-group container" id="lista"></ul>
+        </div>
+    </main>
+
+    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="movieDetails" aria-labelledby="movieDetailsLabel">
+      <div class="offcanvas-header">
+          <h5 id="movieDetailsLabel"></h5>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
-    </div>
+      <div class="offcanvas-body">
+          <h6>Resumen:</h6>
+          <p id="movieOverview"></p>
+          <h6>Géneros:</h6>
+          <p id="movieGenres"></p>
+          <h6>Detalles:</h6>
+          <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle="dropdown" aria-expanded="false">
+                  Más detalles
+              </button>
+              <ul class="dropdown-menu text-bg-dark" aria-labelledby="dropdownMenuButton">
+                  <li><a class="dropdown-item" id="movieYear"></a></li>
+                  <li><a class="dropdown-item" id="movieDuration"></a></li>
+                  <li><a class="dropdown-item" id="movieBudget"></a></li>
+                  <li><a class="dropdown-item" id="movieRevenue"></a></li>
+              </ul>
+          </div>
+      </div>
+  </div>
 
-    <div class="album">
-      <ul class="list-group container" id="lista">
-      </ul>
-    </div>
-  </main>
-
-  <footer class="text-muted py-3">
-    <div class="container">
-      <p class="float-end mb-1">
-        <a href="#">Volver arriba</a>
-      </p>
-      <p class="mb-1">Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">
-          Jovenes a Programar</a>.
-      <p class="mb-1">Generado con fines estrictamente educativos.</p>
-    </div>
-  </footer>
-
-  <script src="js/bootstrap.bundle.min.js"></script>
+    <footer class="text-muted py-3">
+        <div class="container">
+            <p class="float-end mb-1">
+                <a href="#">Volver arriba</a>
+            </p>
+            <p class="mb-1">Este sitio forma parte de <a href="https://jovenesaprogramar.edu.uy/" target="_blank">Jovenes a Programar</a>.</p>
+            <p class="mb-1">Generado con fines estrictamente educativos.</p>
+        </div>
+    </footer>
+    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/index.js"></script>
+    
+</body>
+</html>
+  
 
 </body>
 
